tests/build/fail/widget/cannot_instantiate_widget_mixin.stderr
error: cannot instantiate widget mix-ins
 --> $DIR/cannot_instantiate_widget_mixin.rs:4:9
  |
4 | pub mod test_mixin {}
  |         ^^^^^^^^^^
...
7 |     let _ = test_mixin!();
  |             ------------- in this macro invocation
  |
  = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)
